# news_dector

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt  vercel.json
models/: model.pkl  vectorizer.pkl
static/: index.html
