[project]
name = "fake-news-detector"
version = "0.1.0"
description = "A FastAPI app for fake news detection"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn",
    "scikit-learn==1.6.1",
    "google-genai",
    "pymongo",
    "python-dotenv",
    "newspaper3k",
    "nltk"
]

[tool.uv]
managed = true